chickadee.css
/* ... */
/* Introduce a new "Block formatting context" (9.4.1) 
   for each of these block elements by setting
   overflow to anything other than visible.  This
   allows blocks to flow around floats.  Certain
   elts, such as table cells, get a BFC automatically. */
#main dl, #main ul, #main ol,
#main h1, #main h2, #main h3,
#main h4, #main h5, #main h6,
#hdr {
  overflow: hidden;
  /* Also set hasLayout in IE6 and IE7 */
  zoom: 1;
  min-height: 0;
}
/* New BFC for pre but allow horiz. scrollbar
   to appear rather than truncating content. */
#main pre {
  overflow: auto;
}
/* PRE wrapping rather than overflow. */
#main pre {
  white-space: pre-wrap; /* CSS3 */
  white-space: -moz-pre-wrap !important; /* Mozilla, since 1999 */
  white-space: -pre-wrap; /* Opera 4-6 */
  white-space: -o-pre-wrap; /* Opera 7 */
  word-wrap: break-word; /* Internet Explorer 5.5+ */
}

ul li {
  margin-bottom: 3px;  /* > 0 helps avoid cutoff of bottom link border */
}

form.lookup input.text, div.incsearch {
  width: 50%;
  font-family: "Georgia", "Times New Roman", serif;
  font-size: 16px;
  border: 1px solid #888888;
  padding-left: 0.2em; padding-right: 0.2em;
/*  padding: 2px; */   /* make up for 3px border on buttons */
}
form.lookup input.text:focus {
  outline: none;
  border: 1px solid black;
}
#searchbox {
  width: 75%;
  max-width: 45em;
  margin-bottom: 1em;
  float: left;
}
form.lookup { overflow: hidden; zoom: 1; min-height: 0; }

div.buttons {
  float: left;
  margin-left: 0.5em;
  width: 5em;
}
form.lookup input.button:focus {
/*  outline: 1px solid #888888; */
  border: 1px solid black;
  outline: none;
  background-color: #f4f4f4;
}
input.button {
  font-family: "Georgia", "Times New Roman", serif;
  cursor: pointer;
}
form.lookup input.button {
  font-size: 0.875em;
/*  font-size: 16px;*/
  border: 1px solid #888888;
  background-color: #fcfcfc;
  margin-left: 0.2em;
  width: 100%; /* inside div */
  margin-bottom: 0.2em;
}

#hdr-lookup {
    float: right;
    border-left: 1px solid black;
    border-right: 1px solid black;
    margin-right: 10px;
}
#hdr-searchbox {
    padding: 0 0.2em;
    margin: 0;
    border: 0;      /* not none -- fixes border in IE6 */
    font-size: 13px;
    font-family: "Georgia", "Times New Roman", serif;
    width: 18em;
    outline: none;
    -webkit-appearance: none;
}
#hdr-searchbox-incsearch {
    font-size: 13px;
}
#hdr-submit {
/*    float: right; */
    margin: 0;
    padding: 0;
    border: 0;
    background-color: transparent;
    background-image: url('mag.png?d25a9700'); /* manual cache bust */
    background-position: center center;
    background-repeat: no-repeat;
    margin-left: 2px;
    margin-right: 3px;
/*    margin-right: 0.5em; */   /* matches left indent */
    width: 12px;
    height: 13px;
    outline: none;
/*    border: none;
    border-left: 1px solid #888888; */
}
#hdr-submit:focus {
    outline: 1px dotted #888888;
}

#navskip {
  display: none;
}

div.incsearch {
  border: 1px solid #000000;
  overflow: hidden;
  zoom: 1;
  min-height: 0;
  padding: 0;
  position: absolute;
  display: none;
  background-color: #ffffff;
  cursor: default;
  -webkit-box-shadow: 0px 1px 3px #bbb;
  -moz-box-shadow: 0px 1px 3px #bbb;
  box-shadow: 0px 1px 3px #bbb;
}

div.incsearch ul {
  margin: 0;
  padding: 0;
  list-style-type: none;
}
div.incsearch ul li {
  margin: 0;
  padding: 0 0.5em;
}
div.incsearch li.hover {
  /* IE6 doesn't support :hover on non-A. */
  background-color: #bbbbbb;
}

/* -- Highlighting */
pre.highlight i {
  font-style: normal;
}
pre.highlight .symbol {
/*  font-weight: bold; */
  font-style: italic;
  color: #555;
}
pre.highlight .special {
  font-style: italic;
}
pre.highlight .comment {
  color: #44a;
  font-style: italic;
}
pre.highlight .string, .character {
  color: #264;
}
pre.highlight .default {
  color: #000;
}
pre.highlight .paren1, .paren2, .paren3, .paren4, .paren5, .paren6 {
  color: #777;
}

@media only screen and (max-device-width: 480px) {
    html { -webkit-text-size-adjust: none; }
}

@media screen and (min-width: 1901px) {
    #contents ul.contents-list li {
      width: 12.5%;
    }
}

@media screen and (max-width: 1900px) {
    #contents ul.contents-list li {
      width: 12.5%;
    }
}

@media screen and (max-width: 1600px) {
    #contents ul.contents-list li {
      width: 14.28572857%;
    }
}

@media screen and (max-width: 1280px) {
    #contents ul.contents-list li {
      width: 16.666666%;
    }
}


@media screen and (max-width: 1024px) {
    #contents ul.contents-list li {
      width: 20%;
    }
}

@media screen and (max-width: 800px) {
    #contents ul.contents-list li {
      width: 25%;
    }
}
/* ... */

